<resources>
<string name="app_name">PhonePark</string>
<string name="action_settings">Settings</string>

<string name="bluetooth_device_selected">You have selected %1$s as your car bluetooth device</string>

<!-- menu items -->
<string name="menu_item_clearlog">Clear Log</string>
<string name="menu_item_showlog">Show Log</string>
<string name="menu_item_showSensors">Show Sensors</string>
<string name="menu_item_settings">Settings</string>
<string name="menu_item_advanced_settings">Advanced Setting</string>
<string name="menu_item_force_navigation">Start Navigation</string>
<string name="menu_item_more">Find More Parking</string>
<string name="menu_item_less">Find Less Parking</string>
<string name="menu_item_stop">Stop</string>
<string name="menu_item_select_blutooth_device">Add Bluetooth Device </string>
<string name="menu_item_change_search_radius"> Change Search Radius</string>
    <string name="menu_item_show_route"> Parking Blocks</string>
    <string name="menu_item_ping_server"> Ping Server</string>
    <string name="menu_item_pdp"> Park Test </string>
    <string name="menu_item_stop_routing"> Stop </string>





<string name="radius">1</string>
<color name="white">#ffffff</color>
<color name="green">#a4c639</color>


<!-- settings -->
<string name="log_on">Enable logging</string>
<string name="apply">Apply</string>
<string name="cancel">Cancel</string>
<string name="bluetooth_device">Set car bluetooth device</string>
<string name="set_bluetooth_message">Please select vehicle Bluetooth device:</string>
<string name="normal_distribution_delta">Delta for normal distribution</string>

<!-- advanced setting -->
<string name="mobility_state_method">Use Goog Act. Upd. in Fusion</string>
<string name="Google_activity_update_interval">Goog Act. Upd. Interval(sec)</string>
<string name="Google_activity_update_interval_hint">5</string>



<string name="detection_threshold">Detection Thres.</string>
<string name="detection_threshold_hint">0.80</string>
<string name="detection_interval">Detection Interval (sec.)</string>
<string name="detection_interval_hint">10</string>


<string name="is_outdoor">Is Outdoor</string>
<string name="log_accl_raw_switch">Log raw accl</string>
<string name="log_report_switch">Log detections</string>
<string name="log_error_switch">Log errors</string>
<string name="log_accl_features_switch">Log accl features</string>
<string name="log_environ_switch">Log environ features</string>

<string name="CIV_classifier_switch">Classifier CIV</string>



<string name="delta_hint">delta for conditional prob.</string>
<string name="delta_default_value">2.0</string>

<string name="log_message">type %1$s confidence %2$d</string>

<string name="activity_title">Manage Activity Updates</string>
<string name="app_description">Demonstrates activity recognition</string>
<string name="start_button">Start</string>
<string name="stop_button">Stop</string>
<string name="connected">Connected to Location Services</string>
<string name="disconnected">Disconnected from Location Services</string>
<string name="connection_failed">Connection to service failed: error code %1$d</string>
<string name="log_file_deletion_error">Log file deletion error.</string>
<string name="notification_title">You are moving</string>
<string name="turn_on_GPS">Click to turn on GPS, or swipe to ignore</string>
<string name="activity_updates_requested">Activity updates requested</string>
<string name="service_not_connected">Not connected to Location Services</string>
<string name="activity_updates_stop">Stopping activity update requests</string>




<string name="logs_deleted">Log file(s) deleted</string>
<string name="start_updates">Start Updates</string>
<string name="stop_updates">Stop Updates</string>
<string name="play_services_available">Location Services is available</string>
<string name="invalid_action">Invalid action received. See error log for details.</string>
<string name="invalid_action_detail">Invalid action %1$s received.</string>
<string name="unknown">--Unknown--</string>
<string name="no_log_data">No log data is available</string>
    <string name="activity_recognition_error_detail">
        Activity recognition error, code %1$d message %2$s.
    </string>
<string name="date_format_error">Internal error: date formatting exception.</string>
<string name="log_filename">%1$s%2$s%3$d%4$s</string>
<string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>

<string name="map_api_key">08aJscbbtIL1_gdkwk1rE2a03Tqi80IqWLO4nxQ</string>

<string name="main_no_items">No sensors</string>
<string name="settings_capture">Capture</string>
<string name="settings_rate">Sampling rate:</string>
<string name="sensor_settings">Settings</string>
<string name="textview_sampling">Sampling</string>
<string name="main_settings">Settings</string>


</resources>