<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- <item android:id="@+id/menu_item_clearlog" android:title="@string/menu_item_clearlog" android:enabled="true"></item>-->
    <!-- <item android:id="@+id/menu_item_showlog" android:visible="true" android:enabled="true" android:title="@string/menu_item_showlog"></item> -->
    <item android:id="@+id/menu_item_showSensors" 
        android:visible="true" 
        android:enabled="true" 
        android:title="@string/menu_item_showSensors">
    </item>

    <item android:id="@+id/menu_item_settings" 
        android:visible="true" 
        android:enabled="true" 
        android:title="@string/menu_item_settings">
    </item>

   	<item android:id="@+id/menu_item_advanced_settings" 
   	    android:visible="true"
   	     android:enabled="true" 
   	     android:title="@string/menu_item_advanced_settings">
   	</item>

	<item android:id="@+id/menu_item_show_route"
		android:visible="true"
		android:enabled="true"
		android:title="@string/menu_item_show_route">
	</item>

	<item android:id="@+id/menu_item_ping_server"
		android:visible="true"
		android:enabled="true"
		android:title="@string/menu_item_ping_server">
	</item>

	<item android:id="@+id/menu_item_pdp"
		android:visible="true"
		android:enabled="true"
		android:title="@string/menu_item_pdp">
	</item>

	<item android:id="@+id/menu_item_stop_routing"
		android:visible="true"
		android:enabled="true"
		android:title="@string/menu_item_stop_routing">
	</item>
<!--   	<item android:id="@+id/menu_item_force_navigation"
   	    android:visible="true"
   	     android:enabled="true" 
   	     android:icon="@drawable/parkingsearch"
   	     android:showAsAction="always"
   	     android:title="@string/menu_item_force_navigation">
   	</item>
   	<item android:id="@+id/menu_select_blutooth_device" 
   	    android:visible="true"
   	     android:enabled="true" 
   	     android:showAsAction="never"
   	     android:title="@string/menu_item_select_blutooth_device">
   	</item>
   	   	<item android:id="@+id/menu_change_search_radius" 
   	    android:visible="true"
   	     android:enabled="true" 
   	     android:showAsAction="never"
   	     android:title="@string/menu_item_change_search_radius">
   	</item>

   	   	<item android:id="@+id/menu_item_stop" 
   	    android:visible="true"
   	     android:enabled="true" 
   	     android:icon="@drawable/stop"
   	     android:showAsAction="always"
   	     android:title="@string/menu_item_stop">
   	</item>-->
    
</menu>