<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:padding="10dip" android:background="#101010">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TableLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:stretchColumns="0,1">
			
			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/log_on"
					android:textSize="25sp"
					></TextView>

				<ToggleButton android:id="@+id/log_on"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_gravity="right"
				></ToggleButton>
			</TableRow>
			
			<TableRow android:layout_width="fill_parent" 
			    android:layout_height="wrap_content">
			    <Button android:id="@+id/bt_device_button" android:layout_width="wrap_content"
			        android:text="@string/bluetooth_device"></Button>
			</TableRow>
			

			
            <TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<Button android:id="@+id/cancel_button" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/cancel"></Button>
				<Button android:id="@+id/apply_button" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/apply"></Button>
			</TableRow>

		</TableLayout>
	</ScrollView>

</RelativeLayout>
